--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -710,4 +710,14 @@ in powerShell
     - 하트비트 방식으로 접속 중에는 주기적으로 online 상태를 갱신하는 방식이 견고했을 것 같다.
     - 우선을 빠른 대응을 위해 유저가 요청을 보낼 때마다 online 상태를 set 하는 걸로 대응. 이 방식의 허점은 failover 이후 유저가 첫 요청을 보내기 전까지 offline 상태로 인식함. 유저가 아무것도 안 한다면 서비스가 잘못 인식할 수도 있는 것.
 
+## 25.02.21
 
+[C++ Debugging with AI-Generated breakpoint expressions](https://devblogs.microsoft.com/visualstudio/supercharge-c-debugging-with-ai-generated-breakpoint-expressions/)
+
+> Have you ever spent hours debugging your C++ code, struggling to set up the right conditional breakpoint or tracepoint? Or wished for a smarter way to obtain detailed runtime information without manually crafting complex expressions? You’re in luck! With Visual Studio 2022, the latest GitHub Copilot feature now offers AI-generated expressions for both conditional breakpoints and tracepoints, available from C# 17.10 and now extended to C++. With these AI-generated conditional breakpoints and tracepoints, you can now automate the creation of intelligent expressions tailored to your specific debugging needs, significantly speeding up the process and enhancing your ability to diagnose and resolve issues.
+
+![image_2025-02-21-17-25-37](img/image_2025-02-21-17-25-37.png)
+
+디버그 모드 중단점(breakpont)를 지정할 때, break 조건을 같이 설정할 수 있다.
+
+- 하지만 좀 까다로운 점이, 이 중단점 연산을 input 입력할 때 코드 분석을 지원하지 않아서 정작 필요할 때 컴파일 오류를 낼 때가 허다했는데, ai 가 만들어주면 훨씬 낫겠지 싶은 감상
