--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -721,3 +721,50 @@ in powerShell
 디버그 모드 중단점(breakpont)를 지정할 때, break 조건을 같이 설정할 수 있다.
 
 - 하지만 좀 까다로운 점이, 이 중단점 연산을 input 입력할 때 코드 분석을 지원하지 않아서 정작 필요할 때 컴파일 오류를 낼 때가 허다했는데, ai 가 만들어주면 훨씬 낫겠지 싶은 감상
+
+## 25.02.24
+
+[일러페스 6 '늙은 오타쿠'가 '서브컬처 게임' 개발자에게 건네는 조언](https://www.thisisgame.com/webzine/nboard/263?n=205801)
+
+> 2월 10일, 일러스타 페스 6의 부대 행사 '일러스타콘'에서 <에버소울>의 김철희 총괄 PD가 '늙은 오타쿠의 서브컬처 게임 개발기'를 주제로 강연했다
+
+- [(312) 늙은 오타쿠가 늙은 오타쿠를 공감하는 영상 - YouTube](https://www.youtube.com/watch?v=-FvSRrSdBJc)
+
+**서브컬처 게임은 레드오션 "투자자가 꺼린다"**
+
+김철희 디렉터는 "불편한 이야기지만, 최근 서브컬처 게임은 투자를 받기 어렵다"고 했다. 이유는 다음과 같다.
+
+1. 디테일이 중요해 초기 개발 비용이 크다.
+2. PvE나 신규 캐릭터 위주의 BM이 형성되기에 다른 게임에 비해 라이브 서비스 유지 비용이 크다.
+3. 그럼에도 수익이 타 장르 게임에 비해 크지 않다. 즉, 가성비가 나쁘다.
+
+    만약 100억을 투자받아 게임을 개발한다고 가정하면, 보통 이 정도의 돈이 들어간다.
+
+    중위연봉 5천만 원 기준 부대비용을 포함해 개발자 1명의 1년 비용은 '대략 1억'이다. 단순 계산으로 기획, 프로그래머, 아트, 기타 인원을 합쳐 50명의 개발진이 딱 2년 개발할 수 있는 비용이다. 이것도 단순 예시를 위한 것일 뿐 실제로는 더욱 어렵다. 서브컬처 게임의 전체적인 퀄리티가 올라가고 디테일이 중요하게 여겨지는 시기에 50명으로 할 수 있는 것은 많지 않다. 2년이라는 개발 기간도 매우 촉박하다.
+
+    여기에 사운드, 외주비, 더빙과 같은 추가 비용까지 고려하면 개발비는 더욱 소모된다. 기획이 중간에 엎어지거나 출시가 연기되면 최소 50억의 개발비가 더 필요해진다. 김철희 디렉터는 "이외로 100억이란 개발비로 할 수 있는 것이 많지 않다"고 했다.
+
+...
+
+**3 - 타 게임과의 비교에 주의**
+
+    서브컬처 게임만의 특징으로는 유사 장르 게임간의 비교가 있다. 
+
+    <에버소울>은 첫 시즌 이벤트에서 마트의 '매대'와 같은 방식으로 이벤트 상점을 구성했다. 여러 가지 상품이 존재하고 플레이어가 사고 싶은 것만 구매해 가는 것이다. 매대 방식으로 마련된 만큼 유저가 이벤트 상점의 모든 것을 구매하기는 어려웠다. 김철희 디렉터는 "엄청나게 허튼 생각이었다. 살면서 먹을 욕을 다 먹고 정신이 혼미해졌다"고 말했다.
+
+    김철희 디렉터는 나중에 분석을 해 본 결과, 다른 유사 장르와 비교하면서 게임을 플레이한다는 사실을 알았다고 했다. 서브컬처 게임 소비자는 게임의 정책이나 규칙 뿐만 아니라, 스토리 퀄리티와 과금 효율 등등 많은 것을 타 게임과 비교한다.
+
+    "이 게임은 트럭 하나(대략 10만원 이상)에 뽑기 몇 번을 할 수 있냐"는 질문이 통용되는 곳이 서브컬처다. 그래서 타 게임과 비교하며 자신의 게임이 특별이 불합리한 부분이 없나 살펴야 한다.
+
+...
+
+**4 - 게임 엔진 업데이트는 신중히**
+
+    <에버소울>은 유니티 엔진 2020년 버전으로 개발됐으나, 2022년 버전으로 크게 업데이트를 한 적이 있다. 2020년 엔진의 서포트가 중단되기도 했고, 유니티의 정책 업데이트로 인해 필수불가결한 상황이었다. 엔진 업데이트는 중요한 만큼 오랜 시간을 투자해 클라이언트에 업데이트됐다. 
+
+    초기에는 큰 문제가 없었지만, 게임의 메모리 점유율이 급증하고, 알 수 없는 렉, 크래시, 45프레임 설정 불가 등 온갖 문제가 터져나왔다.
+
+    김철희 디렉터는 "지옥 같은 시간이었다"고 당시를 회고했다. 모든 캐릭터의 최적화를 다시 하고, 캐릭터마다 전투용과 컷신용 모델링을 구분했다. 45프레임 지원은 연구 끝에 포기했다. 프리징 문제는 도저히 고쳐지지 않아 머리를 싸맸는데, 어느 날 유니티에서 "엔진에 버그가 있었다"는 연락이 오며 해결됐다.
+
+
+
