--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -767,4 +767,34 @@ in powerShell
     김철희 디렉터는 "지옥 같은 시간이었다"고 당시를 회고했다. 모든 캐릭터의 최적화를 다시 하고, 캐릭터마다 전투용과 컷신용 모델링을 구분했다. 45프레임 지원은 연구 끝에 포기했다. 프리징 문제는 도저히 고쳐지지 않아 머리를 싸맸는데, 어느 날 유니티에서 "엔진에 버그가 있었다"는 연락이 오며 해결됐다.
 
 
+## 25.02.25
 
+[Please stop recommending Git Flow! – George Stocker](https://georgestocker.com/2020/03/04/please-stop-recommending-git-flow/)
+
+- [Git 브랜치 전략 Git Flow와 GitHub Flow](https://f-lab.kr/insight/git-branch-strategy-20240523)
+- git flow 와 github flow 라고 국내 개발 블로그 사이에서는 유명한 듯 한데, Hacker News 나 Wikipedia 에서 찾아보면 그렇게 내용이 많진 않다.
+
+![image_2025-02-25-15-20-04](img/image_2025-02-25-15-20-04.png)
+
+- Gitflow violates the “Short-lived” branches rule
+- Gitflow abandons rebasing
+- Gitflow makes Continuous Delivery Improbable
+
+그리고 국내 개발 블로그들이 `github flow` 라고 말하는 것은 아무래도 Trunk-Based Development(TBD) 가 더 직관적인 표현인 듯
+
+- [GitHub flow - GitHub Docs](https://docs.github.com/en/get-started/using-github/github-flow)
+- 정작 github 공식 문서의 gitHub flow 설명을 보면
+  - pull request 생성 -> 리뷰 -> merge -> source branch 제거 
+  - 위 워크플로에 대해서만 서술하고 있음.
+
+- [What is Trunk-Based Development](https://paulhammant.com/2013/04/05/what-is-trunk-based-development/)
+
+Quick reminder of what TBD is:
+
+- Developers commit to a single trunk more or less exclusively
+- Release engineers (or build-cop) create branches, and cherry-pick to branches more or less exclusively
+- Only if a defect cannot be reproduced on trunk, is permission given to fix it on the release branch, and cherry-pick back to trunk.
+- And if you get the release branch concept, it’s worth remembering:
+
+- Trunk-Based Development means regular developers don’t commit to a release branch.
+- Trunk-Based Development means you’re going to delete ‘old’ release branches, without merging them back to trunk.
