--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -780,7 +780,7 @@ in powerShell
 - Gitflow abandons rebasing
 - Gitflow makes Continuous Delivery Improbable
 
-그리고 국내 개발 블로그들이 `github flow` 라고 말하는 것은 아무래도 Trunk-Based Development(TBD) 가 더 직관적인 표현인 듯
+그리고 국내 개발 블로그에서 `github flow` 라고 말하는 것은 아무래도 Trunk-Based Development(TBD) 가 더 직관적인 표현인 듯
 
 - [GitHub flow - GitHub Docs](https://docs.github.com/en/get-started/using-github/github-flow)
 - 정작 github 공식 문서의 gitHub flow 설명을 보면
@@ -798,3 +798,18 @@ Quick reminder of what TBD is:
 
 - Trunk-Based Development means regular developers don’t commit to a release branch.
 - Trunk-Based Development means you’re going to delete ‘old’ release branches, without merging them back to trunk.
+
+## 25.03.02
+
+[(347) 첫 직장이 별로라면? 이렇게 하세요](https://www.youtube.com/watch?v=flo9XZCPPKw)
+
+- 그냥 가라.
+- 인사팀 관점을 생각해야 함. 인사 관리자도 리스크를 회피하고 싶어함. 대부분 커리어가 아직 없는 지원자보다 한번이라도 있다면 '다른 곳에서 한번 합격점을 받았다면 최소한의 보장이 되겠지' 라는 의견이 많음. 아직 레퍼런스가 없는 사람에게 기회를 줬다가 일이 잘못되는 상황을 두려워함.
+  - 과거 회사가 영 좋지 못한 회사였다...??
+  - 그래도 그 회사가 범법적인 활동으로 문제를 생긴것이 아니라면 그렇게 부정적이지 않음
+  - 실제 면접에서도 이렇게 대답한다면 인사팀이 긍정적으로 볼 수 있다.
+    - 첫 직장으로 들어간 곳이 좋은 곳이라고 할 수는 없습니다. 하지만 당시에는 금전적으로 여유가 없어서 조금이라도 빨리 취업을 해야 겠다는 생각이었습니다. 하지만 이제 커리어 연차가 쌓이고 금전적으로 급한 상황에서 벗어나고 보니 제 커리어를 좀더 발전시키고 싶은 욕심이 생겼습니다. 그래서 좀 더 여건이 좋은 회사에 지원하게 되었습니다.
+  - 라고 말하면 인사팀 입장에서는 끄덕여줌. 첫 취업이 쉽지 않다는 것은 다 알고 있음.
+- 첫 직장 입사 후 바로 더 좋은 회사에 붙어서 이직하는 것도 가능한 이야기임. 1개월 차부터 이직 준비할 수 도 있는 것임. 나가겠다는 걸 말리진 못함.
+  - 과거 직장경력이 문제가 될 것 같으면 애초에 지원서에 적지 않으면 됨.
+  - 취준생으로 시간을 보내는 것 보다 직장에 있으면 수입도 있고 실무 경력도 얻게 됨.
