--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -813,3 +813,42 @@ Quick reminder of what TBD is:
 - 첫 직장 입사 후 바로 더 좋은 회사에 붙어서 이직하는 것도 가능한 이야기임. 1개월 차부터 이직 준비할 수 도 있는 것임. 나가겠다는 걸 말리진 못함.
   - 과거 직장경력이 문제가 될 것 같으면 애초에 지원서에 적지 않으면 됨.
   - 취준생으로 시간을 보내는 것 보다 직장에 있으면 수입도 있고 실무 경력도 얻게 됨.
+
+## 25.03.05
+
+[(381) 데이터 정규화가 뭔지 설명해보세요 (개발면접타임) - YouTube](https://www.youtube.com/watch?v=Y1FbowQRcmI&list=WL&index=21)
+
+- 1NF: [First normal form - Wikipedia](https://en.wikipedia.org/wiki/First_normal_form)
+- 2NF: [Second normal form - Wikipedia](https://en.wikipedia.org/wiki/Second_normal_form)
+- 3NF: [Third normal form - Wikipedia](https://en.wikipedia.org/wiki/Third_normal_form)
+
+**1정규형**
+
+> A relation is in first normal form if and only if **no attribute domain has relations as elements.**[1] Or more informally, that **no table column can have tables as values.**
+
+- 속성(attribute) 즉 컬럼 값은 관계(relation) 을 가질 수 없다. 즉 테이블의 컬럼 값은 테이블을 포함할 수 없다.
+- 하나의 행에는 atomic 원소를 가져야 한다. 
+
+**2정규형**
+
+- It is in first normal form.
+- It does not have any non-prime attribute that is functionally dependent on any proper subset of any candidate key of the relation (i.e. it lacks partial dependencies). A non-prime attribute of a relation is an attribute that is not a part of any candidate key of the relation.
+
+Put simply, a relation (or table) is in 2NF if:
+
+- It is in 1NF and has a single attribute unique identifier (UID) (in which case every non key attribute is dependent on the entire UID), or
+- It is in 1NF and has a multi-attribute unique identifier, and every regular attribute (not part of the UID) is dependent on all attributes in the multi-attribute UID, not just one attribute (or part) of the UID.
+
+- 1정규형을 만족하며, 단일컬럼의 PrimaryKey를 가지는 경우
+- 1정규형을 만족하며, 복합 컬럼(compsite key)의 PrimaryKey를 가지는 면서 partial dependency를 관계의 컬럼이 없어야 한다.
+  - PrimaryKey 가 아닌 다른 컬럼이 복합 컬럼 중 어느 하나의 컬럼과도 종속 관계여선 안된다.
+
+**3정규형**
+
+Codd's definition states that a table is in 3NF if and only if both of the following conditions hold:
+
+- The relation R (table) is in second normal form (2NF).
+- No non-prime attribute of R is transitively dependent on the primary key.
+
+- 제 2 정규형을 만족하며, 이행적 종속 관계(transitive dependency) 인 컬럼이 없어야 한다.
+  - 모든 비주요 컬럼은 primary key 에 직접적으로 종속되어야 한다.
