--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -852,3 +852,61 @@ Codd's definition states that a table is in 3NF if and only if both of the follo
 
 - 제 2 정규형을 만족하며, 이행적 종속 관계(transitive dependency) 인 컬럼이 없어야 한다.
   - 모든 비주요 컬럼은 primary key 에 직접적으로 종속되어야 한다.
+
+## 25.03.06
+
+[Git 코어 개발자는 Git을 어떻게 설정하고 사용할까  GeekNews](https://news.hada.io/topic?id=19441)
+
+- "Pro Git" 저자인 Scott Chacon이 글로벌로 활성화한 몇 가지 Git 설정과 그 이유를 설명
+- Git 을 더 좋게 만드는 ~/.gitconfig 설정을 소개함.
+
+```
+[column]  
+ui = auto  
+[branch]  
+sort = -committerdate  
+[tag]  
+sort = version:refname  
+[init]  
+defaultBranch = main  
+[diff]  
+algorithm = histogram  
+colorMoved = plain  
+mnemonicPrefix = true  
+renames = true  
+[push]  
+default = simple  
+autoSetupRemote = true  
+followTags = true  
+[fetch]  
+prune = true  
+pruneTags = true  
+all = true  
+
+# 쓰지 않을 이유가?  
+
+[help]  
+autocorrect = prompt  
+[commit]  
+verbose = true  
+[rerere]  
+enabled = true  
+autoupdate = true  
+[core]  
+excludesfile = ~/.gitignore  
+[rebase]  
+autoSquash = true  
+autoStash = true  
+updateRefs = true  
+
+# 개인 취향에 따른 설정 (필요 시 주석 해제하고 사용)  
+
+[core]  
+# fsmonitor = true  
+# untrackedCache = true  
+[merge]  
+# (Git 버전이 2.3 미만인 경우 ‘diff3’ 사용)  
+# conflictstyle = zdiff3  
+[pull]  
+# rebase = true  
+```
