--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -910,3 +910,16 @@ updateRefs = true
 [pull]  
 # rebase = true  
 ```
+## 25.03.12
+
+[catsriding  백엔드 개발자를 위한 유용한 터미널 CLI 도구 정리하기](https://www.catsriding.com/posts/terminal-cli-tools-for-backend-developers)
+
+- [GitHub - junegunnfzf cherry_blossom A command-line fuzzy finder](https://github.com/junegunn/fzf)
+  - fuzzy finder
+- [GitHub - rupaz z - jump around](https://github.com/rupa/z)
+  - z : 터미널 cd 기능을 좀더 편리하게
+- [GitHub - ajeetdsouzazoxide A smarter cd command. Supports all major shells.](https://github.com/ajeetdsouza/zoxide)
+  - zoxide : z 의 영향을 받음. 마찬가지로 터미널 cd 기능을 좀더 편리하게
+- [GitHub - jqlangjq Command-line JSON processor](https://github.com/jqlang/jq)
+  - jq : cli 기반 json 처리
+
