--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -965,4 +965,13 @@ updateRefs = true
 - 따라서 최적의 중심 좌표를 찾는 알고리즘을 개발하여, 예약 확률이 높은 숙소를 지도 중앙에 배치
   - 다양한 좌표 후보를 평가하여, 가장 높은 예약 확률 숙소들과의 거리가 가까운 위치를 새로운 중심으로 삼음
 
+---
 
+**Command & Conquer 소스코드 공개 (GPL license)**
+
+- [EA releases recovered source code for its Command & Conquer franchise  Polygon](https://www.polygon.com/news/531365/command-and-conquer-open-source-code-ea)
+- 4 타이틀이 공개됨
+  - [GitHub - electronicartsCnC_Tiberian_Dawn Command and Conquer Tiberian Dawn](https://github.com/electronicarts/CnC_Tiberian_Dawn)
+  - [GitHub - electronicartsCnC_Red_Alert Command and Conquer Red Alert](https://github.com/electronicarts/CnC_Red_Alert)
+  - [GitHub - electronicartsCnC_Renegade Command and Conquer Renegade](https://github.com/electronicarts/CnC_Renegade)
+  - [GitHub - electronicartsCnC_Generals_Zero_Hour Command and Conquer Generals - Zero Hour](https://github.com/electronicarts/CnC_Generals_Zero_Hour)
