--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -975,3 +975,109 @@ updateRefs = true
   - [GitHub - electronicartsCnC_Red_Alert Command and Conquer Red Alert](https://github.com/electronicarts/CnC_Red_Alert)
   - [GitHub - electronicartsCnC_Renegade Command and Conquer Renegade](https://github.com/electronicarts/CnC_Renegade)
   - [GitHub - electronicartsCnC_Generals_Zero_Hour Command and Conquer Generals - Zero Hour](https://github.com/electronicarts/CnC_Generals_Zero_Hour)
+
+---
+
+**업계 6년차 때 생각들, 그리고 10년차 때 생각들**
+
+- 6년차, 10년차에 썼고 15년차에 한번 더 쓴다고 함
+
+[업계에서 6년 있은 뒤, 마음이 바뀐 소프트웨어 개발 토픽들  GeekNews](https://news.hada.io/topic?id=3635)
+
+- [Software development topics I've changed my mind on after 6 years in the industry - Blogomatano](https://chriskiehl.com/article/thoughts-after-6-years)
+
+**마음을 바꾼 것들: 과거엔 싸웠지만, 이제는 믿게된 것들**
+
+- 다양한 경험 수준을 가진 사람들로 구성된 팀에서는 Typed 언어가 더 좋음
+- 스탠드업 미팅은 신참들을 살펴보는데 유용
+- 스프린트 회고는 유용한 것과 좋지 않은 것(애자일/스크럼 마스터가 모든 사람의 시간을 낭비하는)이 따로 있음
+- 소프트웨어 아키텍쳐가 다른 무엇보다 중요. 좋은 추상화의 나쁜 구현은 코드 베이스에 해를 입히지 않음. 나쁜 추상화나 누락된 레이어들 때문에 모든 것이 안 좋아짐
+- 자바는 그렇게 나쁜 언어가 아님
+- 재치있는 코드는 보통 좋은 코드가 아님. 명확성이 모든 것보다 우선
+- 어떤 패러다임에서도 잘못된 코드를 작성 가능
+- "베스트 프랙티스"는 상황마다 다르고, 모든것에 적용가능하지 않음. 맹목적으로 따라가면 바보가 됨
+- 필요가 없는데 확장 가능한 시스템을 설계하면 나쁜 엔지니어가 됨
+- 정적 분석은 유용함
+- DRY는 최종 목표가 아닌 특정 문제를 피하는 것
+- 일반적으로 RDBMS > NoSQL
+- 함수형 프로그래밍은 만병 통치약이 아닌 또 다른 도구임
+
+**도중에 내가 픽한 의견들 :**
+
+- YAGNI > SOLID > DRY : 이 순서대로
+     ㅤ→ You Aren't Gonna Need It : XP의 원칙중 하나
+     ㅤ→ SOLID : 객체지향 설계 5대원칙
+     ㅤㅤSigle responsiblity
+     ㅤㅤOpen-close
+     ㅤㅤLiskov substitution
+     ㅤㅤInterface segregation
+     ㅤㅤDependency inversion
+     ㅤ→ DRY : Don't Repeat Yourself
+- 연필과 종이는 잘 사용되지 않는 최고의 프로그래밍 도구
+- 실용성을 얻기위해 순수성을 거래하는 것은 일반적으로 좋은 선택
+- 더 많은 기술을 추가하는 것은 좋은 선택이 아님
+- 고객과 직접 대화하면 더 적은 시간으로 더 정확하게 문제에 대해서 더 많이 알 수 있음
+- "Scalable" 이란 단어는 소프트웨어 엔지니어의 마음에 신비롭고 깜짝 놀라게 하는 힘이 있음. 살짝 입밖에 내는 것만으로 그들을 타락한 광란에 빠져들게 함. 이 단어를 사용함으로써 무자비한 행동들이 정당화 됨
+- "엔지니어"라고 불림에도 불구하고, 대부분의 결정은 뒷받침하는 분석,데이터,숫자가 없는 화물숭배(cargo-cult) 임
+  - → 화물숭배: 기술적으로 진보한 누군가(사회/선조)가 배나 비행기에 특별한 화물을 가지고 실어 올 것이라고 믿으면서 기다리는 풍습
+- 90% 어쩌면 93%의 프로젝트 매니저들은 효과나 효율성면에서 이득이 없어서 내일이라도 없어질수 있음
+- 100번의 인터뷰를 하고나니, 인터뷰방식은 완전히 망가져 있음. 나 역시 이걸 개선할 방법을 모르겠음
+
+**바뀌지 않은 예전 의견들:**
+
+- 코드 스타일, 린팅 규칙 및 기타 사소한 것들을 강조하는 사람들은 미친 괴짜들임
+- 코드 커버리지는 코드 품질과는 전혀 상관없음
+- 모노리스들은 대부분의 상황에서 꽤 좋음
+- TDD 순수주의자들은 최악임. 그들의 연약한 작은 마음은 다른 워크플로우가 존재한다는 것을 처리할 수 없음
+- 10년차가 되었을때 뭐가 또 바뀌거나 뒤집혔는지 살펴보겠음
+
+[업계에서 10년 있은 뒤, 마음이 바뀐 소프트웨어 개발 토픽들  GeekNews](https://news.hada.io/topic?id=19081)
+
+- [Software development topics I've changed my mind on after 10 years in the industry - Blogomatano](https://chriskiehl.com/article/thoughts-after-10-years)
+
+**바뀐 생각들**
+
+- 단순함은 저절로 주어지지 않고, 지속적 노력이 필요한 요소임
+- **복잡성을 관리하거나 이해하는 것에 자부심을 가질 이유가 없음을 깨달았음**
+- 다양한 경험 수준이 섞인 팀에서는 Typed 언어가 필수적임
+- Java는 재미없어서 오히려 훌륭한 언어임
+- REPL은 설계 도구로서는 유용하지 않지만 탐색적 용도로는 유용함
+- **실제 프로그래밍은 코드를 작성하기 전 단계에서 거의 다 이루어져야 함**
+- Frontend 개발은 Kafkaesque 악몽과 같은 영역이 되었고, 더 이상 즐겁지 않음
+- 우아함이라는 개념은 실제 측정 지표가 되지 못함
+- 제대로 된 매니지먼트는 매우 귀중한 존재임 (오랜 경력 동안 제대로 된 매니지먼트를 거의 보지 못했음)
+- DynamoDB는 특정 워크로드에 정확히 부합한다면 좋은 데이터베이스임
+- 객체지향은 잘 맞는 영역에서 탁월한 방식임. Functional만 맹신하는 태도는 어리석음
+
+**얻게 된 의견들**
+
+- 엔지니어링의 핵심은 소통
+- Java에서 Monad 개념을 너무 심하게 적용하면 안 됨
+- Query Planner는 혹독한 존재임
+- **어떤 것이 '쉽다'고 느끼는 순간은 사실 제대로 이해하지 못했다는 신호임**
+- 신입 개발자에게 탐구와 실수를 할 수 있는 여유를 주어야 함
+- **Soft skill을 적극적으로 발전시켜야 함. 투자 효과가 즉각적으로 나타남**
+- 일반 애플리케이션 개발에서는 '진짜 범용 추상화'라는 것이 거의 없음. 필요한 코드만 작성하는 편이 좋음
+- 반면, 라이브러리 개발은 추상을 설계하는 일임. 올바른 구조(알제브라적 형태)를 찾는 데 시간을 들여야 함
+- **ORM은 모든 언어, 모든 구현에서 문제가 많음. 그냥 SQL을 직접 작성하는 편이 나음**
+- Functional 프로그래밍의 문제는 종종 그 신봉자들 때문임
+- **충분히 오랜 기간이 지나면 Serverless Functions 위에 시스템을 쌓은 것을 크게 후회하게 됨**
+- Type은 우리가 세상을 바라보며 내리는 단언임
+- 분산 락은 여전히 대단히 어려운 문제임
+- 형식적 모델링과 분석 능력은 반드시 갖춰야 할 역량임
+- 통합 테스트 스위트에서 가장 중요한 특성은 격리성임
+- DynamoDB는 일반 애플리케이션 개발을 위한 최악의 선택이 될 수도 있음
+- **대부분의 사람들은 코드 '장인 정신'에 크게 관심이 없음. 관심을 가지는 사람을 소중히 대하되, 나머지 사람들과는 그들이 있는 자리에서 협업해야 함**
+- Gradual, dependently typed 언어가 미래라는 생각임
+- 테스트 코드에는 아무리 많은 주석을 달아도 부족함이 없다는 확신임
+
+**바뀌지 않은 의견들**
+
+- 코드 스타일, 린팅 규칙 등 사소한 문제에 집착하는 사람들은 여전히 이상한 부류라고 생각함. 더 중요한 것에 집중해야 함
+- 코드 커버리지는 코드 품질과 무관하다는 입장을 유지함 (많은 경우 반비례하는 경향도 있음)
+- Monolith는 여전히 괜찮은 선택이라고 여김
+- 수십 년간 축적된 RDBMS 연구와 개선을 이기는 것은 어렵다는 점을 인정함
+- Micro-service를 적용하려면 합당한 이유가 필수적임 (요즘 점점 당연시되는 경향이 아쉬움)
+- 대부분의 프로젝트(심지어 AWS 내부 프로젝트도 마찬가지)는 실제로 '스케일링'이 필요 없고, 오히려 스케일링을 전제로 설계하면 해가 되는 경우가 많음
+- 프로젝트 매니저의 93%, 어쩌면 95.2% 정도는 사라져도 별 영향이 없거나 오히려 효율성이 높아질 것이라는 생각임 (4년 전보다 비율이 상승했음)
+
