--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1081,3 +1081,24 @@ updateRefs = true
 - 대부분의 프로젝트(심지어 AWS 내부 프로젝트도 마찬가지)는 실제로 '스케일링'이 필요 없고, 오히려 스케일링을 전제로 설계하면 해가 되는 경우가 많음
 - 프로젝트 매니저의 93%, 어쩌면 95.2% 정도는 사라져도 별 영향이 없거나 오히려 효율성이 높아질 것이라는 생각임 (4년 전보다 비율이 상승했음)
 
+## 25.03.14
+
+**Unity / Android - Optimized Frame Pacing (OFP)**
+
+- [Android 플레이어 설정 - Unity 매뉴얼](https://docs.unity3d.com/kr/2020.1/Manual/class-PlayerSettingsAndroid.html)
+> Optimized Frame Pacing : 이 옵션을 활성화하면 Unity가 프레임 속도의 편차를 줄이기 위해 프레임을 균등하게 분배하므로 더 부드러운 게임플레이를 구현할 수 있습니다.
+
+- 뭐 이런 옵션이 필요한가 싶은 항목
+  - discussion 페이지와 issue tracker 에서 파편적인 내용을 확인할 수 있었음.
+  - [Unity Issue Tracker - Optimized Frame Pacing increases APK file size when Project is Built](https://issuetracker.unity3d.com/issues/optimized-frame-pacing-increases-apk-file-size-when-project-is-built)
+  - [What's the Optimized Frame Pacing feature - Unity Engine - Unity Discussions](https://discussions.unity.com/t/whats-the-optimized-frame-pacing-feature/733882)
+
+
+    Optimized Frame Pacing prevents a queue of frames building up by synchronizing the time at which a game submits a frame with the time at which the display hardware consumes that frame. With Optimized Frame Pacing enabled, frames spend less time in the queue, decreasing input latency. The effects of a player’s input events are reflected sooner on the screen.
+
+    This is achieved by wrapping rendering calls and employing a variety of techniques which combine the use of APIs such as the Java Choreographer, the Native Choreographer and the EGL_ANDROID_presentation_time GL extension on devices where these are available in order to provide a consistent API from the perspective of the Engine Developer.
+
+    On devices where these techniques are not possible Optimized Frame Pacing will fall back to the original implementations of the wrapped functions, providing no regression of framerate on those devices (i.e. Frame Pacing will remain non-optimal but the code will function as before).
+
+- 뭔가 프레임 큐 지연 시간을 조절한다고 하는데, 유니티는 코드를 공개하지 않는 블랙박스이기 때문에 동작원리를 가늠할 수 없다.
+- 실제 OFP 를 활성화한 프로젝트에서는 오히려 프레임 레이트가 떨어져서 이슈가 되었다.
