--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1085,6 +1085,10 @@ updateRefs = true
 
 **Unity / Android - Optimized Frame Pacing (OFP)**
 
+> 항상 느끼지만 모바일 디바이스 세부적인 옵션들을 조율하는 것은 고통스럽다. 매번 옵션을 키고 끄면서 빌드 & 프로파일링을 해봐야 하고,
+>
+> 더 짜증나는 것은 유니티가 내부 코드를 공개하지 않아서 맨땅에 헤딩하지 않고서야 뭐 알 수 있는게 없다.
+
 - [Android 플레이어 설정 - Unity 매뉴얼](https://docs.unity3d.com/kr/2020.1/Manual/class-PlayerSettingsAndroid.html)
 > Optimized Frame Pacing : 이 옵션을 활성화하면 Unity가 프레임 속도의 편차를 줄이기 위해 프레임을 균등하게 분배하므로 더 부드러운 게임플레이를 구현할 수 있습니다.
 
@@ -1102,3 +1106,7 @@ updateRefs = true
 
 - 뭔가 프레임 큐 지연 시간을 조절한다고 하는데, 유니티는 코드를 공개하지 않는 블랙박스이기 때문에 동작원리를 가늠할 수 없다.
 - 실제 OFP 를 활성화한 프로젝트에서는 오히려 프레임 레이트가 떨어져서 이슈가 되었다.
+  - 옵션 비활성화를 하는 경우 프레임 레이트 변동이 작고, 옵션을 활성화한 경우 프레임 레이트 변동이 더 크다는 프로파일링 보고서가 있었다. (Galaxy s22)
+
+- [Variable Refresh Rate API  Adaptive Performance Samsung Android  4.0.2](https://docs.unity3d.com/Packages/com.unity.adaptiveperformance.samsung.android@4.0/manual/vrr.html)
+  - Variable Refresh Rate(VRR) 과는 또 호환되지 않는 옵션이다.
