--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1110,3 +1110,51 @@ updateRefs = true
 
 - [Variable Refresh Rate API  Adaptive Performance Samsung Android  4.0.2](https://docs.unity3d.com/Packages/com.unity.adaptiveperformance.samsung.android@4.0/manual/vrr.html)
   - Variable Refresh Rate(VRR) 과는 또 호환되지 않는 옵션이다.
+
+## 25.03.16
+
+**가장 흔한 웹 공격**
+
+- 정말 초보적인 실수로 발생할 수도, 쉽게 예방할 수도 있지만
+- 꽤 알려진 문제임에도 끊임없이 발생하고 있다...
+
+- **SQL Injection**
+
+- [SQL injection](https://en.wikipedia.org/wiki/SQL_injection)
+
+    In computing, SQL injection is a code injection technique used to attack data-driven applications, in which malicious SQL statements are inserted into an entry field for execution (e.g. to dump the database contents to the attacker) SQL injection must exploit a security vulnerability in an application's software, for example, when user input is either incorrectly filtered for string literal escape characters embedded in SQL statements or user input is not strongly typed and unexpectedly executed. SQL injection is mostly known as an attack vector for websites but can be used to attack any type of SQL database.
+
+- 사용자 요청 인풋으로 악의적인 sql 문을 보냈을 때 이를 그대로 실행시켜 버려 서비스 데이터를 노출시키는 등의 공격
+- 문자열 이스케이프 처리 조차 하지 않는 경우 다분히 공격에 노출된다.
+
+  - `var statement = "SELECT * FROM users WHERE name = '" + userName + "'";`
+  - ^ 위 코드에서 userNames 필드를 `' OR '1'='1` 로 세팅한다. 아래 모습처럼 되는데
+  - `SELECT * FROM users WHERE name = '' OR '1'='1';`
+  - 모든 사용자명을 반환하는 sql 문이 완성되어버린다.
+
+- ORM (Object-Relation Mapping) 을 사용하면 부분적으로 예방이 가능하다고 한다. 인풋을 객체로 다루는 과정해서 필터링이 되는 것.
+
+- **XSS(Cross-site scripting)**
+
+- [Cross-site scripting](https://en.wikipedia.org/wiki/Cross-site_scripting)
+
+    Cross-site scripting (XSS)[a] is a type of security vulnerability that can be found in some web applications. XSS attacks enable attackers to inject client-side scripts into web pages viewed by other users. A cross-site scripting vulnerability may be used by attackers to bypass access controls such as the same-origin policy.
+
+- [XSS(크로스사이트스크립팅) 기본 우회 방법 및 스킬업](https://jjang-joon.tistory.com/122)
+
+코드를 아래 처럼 작성한 뒤
+
+```https
+<form action="search.php" method="GET">
+  <input type="text" name="query">
+  <input type="submit" value="Search">
+</form>
+```
+
+text 필드에 악성 스크립트를 넣으면 
+
+예시: `https://example.com/search?query=<script>alert('XSS');</script>`
+
+url 페이지를 열 때 'alert' 코드가 실행되어버린다.
+
+- 다른 예로 커뮤니티 게시판 글에 코드를 삽입했는데, 다른 유저가 게시판 글을 열 때 발생되어비리는 경우도 있다.
