--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1158,3 +1158,28 @@ text 필드에 악성 스크립트를 넣으면
 url 페이지를 열 때 'alert' 코드가 실행되어버린다.
 
 - 다른 예로 커뮤니티 게시판 글에 코드를 삽입했는데, 다른 유저가 게시판 글을 열 때 발생되어비리는 경우도 있다.
+
+## 25.03.17
+
+**Model Context Protocol(MCP)**
+
+우리가 외부 서비스 API를 사용할 때는 서비스 별로 다루는 API 모양새가 각각 다르지만
+
+MCP 는 이 다양한 API들을 하나의 정형화된 형태로 다룰 수 있게하는 방법이다.
+
+- 아직 이 모델의 잠재력을 잘 모르게따. 사실 AI 써봐야 내가 모르거나 잊어버린 정보를 찾아주거나 (도서관 사서), 글 번역 / 요약 기능 이상으로 사용해본 적이 없다.
+
+[What is Model Context Protocol (MCP) How it simplifies AI integrations compared to APIs  AI Agents That Work](https://norahsakal.com/blog/mcp-vs-api-model-context-protocol-explained/)
+
+- [Model Context Protocol, MCP - 🤖 AIMLLM 소모임 - 닷넷데브](https://forum.dotnetdev.kr/t/model-context-protocol-mcp/12711)
+
+![image_2025-03-17-17-15-16](img/image_2025-03-17-17-15-16.png)
+
+^ Traditional APIs require developers to write custom integrations for each service or data source
+
+![image_2025-03-17-17-11-48](img/image_2025-03-17-17-11-48.png)
+
+^ The Model Context Protocol (MCP) is a standardized protocol that connects AI agents to various external tools and data sources
+
+Just as USB-C simplifies how you connect different devices to your computer, MCP simplifies how AI models interact with your data, tools, and services.
+
