--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1168,6 +1168,8 @@ url 페이지를 열 때 'alert' 코드가 실행되어버린다.
 MCP 는 이 다양한 API들을 하나의 정형화된 형태로 다룰 수 있게하는 방법이다.
 
 - 아직 이 모델의 잠재력을 잘 모르게따. 사실 AI 써봐야 내가 모르거나 잊어버린 정보를 찾아주거나 (도서관 사서), 글 번역 / 요약 기능 이상으로 사용해본 적이 없다.
+- AI 잠재력에 제일 공감했던 부분은 ChatGPT 4o 가 나올 무렵, gpt가 내가 말한 내용을 듣고 그 답변을 스피커로 들려줄 때. 
+  - 실시간으로 ai 와 사람처럼 대화가 가능한 시대가 열렸다 <- 이 부분
 
 [What is Model Context Protocol (MCP) How it simplifies AI integrations compared to APIs  AI Agents That Work](https://norahsakal.com/blog/mcp-vs-api-model-context-protocol-explained/)
 
