--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1263,3 +1263,24 @@ catch (Exception ex)
 **결론**
 
 File.Exists를 사용하여 파일의 존재 여부를 확인하는 것은 안전하지 않으며, 대신 직접 작업을 수행하고 예외를 처리하는 것이 더 효과적입니다.
+
+## 25.03.18
+
+[(501) 전 이제 DB 스크립트 버전 관리 안 하려고요 - YouTube](https://www.youtube.com/watch?v=7QrDlon3F54&t=47s)
+
+    오늘은 ORM(Object Relational Mapping)과 데이터베이스 스크립트 사용에 대한 생각을 나눕니다.
+    ORM의 장점과 함께, 내부 운영 작업을 위해 사용하는 스크립트를 어떻게 관리할지에 대해 고민해본 적이 있으신가요? 최근 저희 팀에서 얻은 교훈을 바탕으로, 스크립트 대신 코드로 작업을 관리하는 방법과 그 장점들을 이야기합니다. 
+
+- ORM 의 가장 두드러지는 특징은 '버전 관리', '유지 보수' 일 것임
+  - ORM 이 SQL Injection 문제를 막아주기도 함.
+  - DB 와 맵핑이 올바르게 되지 않는 경우도 분명 존재함. 이건 단점임.
+  - ORM 으로 인해서 성능이 저하되는 경우도 분명 있긴 함. -> 이 때는 손으로 쿼리 작성하는 게 더 좋을 수 있음.
+- OOP 객체지향 패러다임 언어에서 객체를 바로 DB 에 맵핑시켜주는 솔루션들이 등장하고 있지만, 포프 아재는 추천하지 않는다 함
+  - DB Access Layer 까지만 코드로 관리하자. 여기서 스키마를 자동으로 뽑아낼 수 있도록 하자.
+
+- tool 레벨의 sql 쿼리
+  - 이런건 사실 상시 빡세게 버전 관리할 필요가 없긴 함
+  - 필요할 때 쿼리쏴보고 에러나면 그때그때 고치지 뭐. 이렇게 해도 된다.
+  - 하지만 어느 순간 버전 관리 되지 않는 쿼리들이 늘어나게 되면 이것도 결국 문제가 된다. DB는 결국 변하게 되어 있음
+  - 이런 일들을 더 이상 스크립트로 하지 말고 간단한 MVC 웹사이트같은 web-tool 을 준비함. 
+  - 여튼 코드로 관리하게 되면, db테이블이 바뀔 때 컴파일이 깨져버린다. 프로그래머는 작업 맥락이 머릿속에 남아있는 상태에서 코드를 고치게 될테니 이것은 분명한 장점이었음.
