--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1492,3 +1492,30 @@ When a query like this is executed:
 2. After it has found the associated user_id value it will use that to perform another lookup into the primary key B+tree, and fetch the username from there.
 
 Overall, we'd like to always minimize the number of blocks / nodes that need to be visited to fulfill a query. The fewer nodes we have to visit, the faster our query can go. The primary key you choose for a table is pivotal in minimizing the number of nodes we need to visit.
+
+## 25.04.14
+
+[게임 프로그래밍에서 AI에 대한 John Carmack의 견해  GeekNews](https://news.hada.io/topic?id=20223)
+
+- 존 카맥이 X 에 올린 포스트
+- https://x.com/ID_AA_Carmack/status/1909311174845329874
+
+    Will there be more or less game developer jobs? That is an open question. It could go the way of farming, where labor saving technology allow a tiny fraction of the previous workforce to satisfy everyone, or it could be like social media, where creative entrepreneurship has flourished at many different scales. Regardless, “don’t use power tools because they take people’s jobs” is not a winning strategy.
+
+- [John Carmack on AI in game programming  Hacker News](https://news.ycombinator.com/item?id=43614546)
+
+해커 뉴스의 댓글 중...
+
+    John, this isn't a power tool. This is a copy machine.
+
+    And while I don't have anything against copy machines per se, that's not how it's being sold to the public. The public is being told this copy machine is a really good power tool that can do lots of things. So what creatives are hearing is "your work is interchangeable with a slightly smarter copy machine, so stop paying creatives and just rip them off".
+
+- 파워툴이 아니라 복사기임. 많은 창의적인 사람들은 '당신을 고용하느니 더 똑똑한 복사기에 돈을 지불하겠다' 라는 소리를 듣고 있음.
+
+...
+
+- 대댓글
+
+    I think you're wrong.
+
+    Anyone who argues that LLMs are "just stochastic parrots" fundamentally doesn't understand what neural networks do. The power does not come from sampling from a distributions over words but from the multi-dimensional representation. And it is that that enables LLMs to be more than just mechanisms that produce copies of material previously seen in training.
