--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1519,3 +1519,58 @@ Overall, we'd like to always minimize the number of blocks / nodes that need to 
     I think you're wrong.
 
     Anyone who argues that LLMs are "just stochastic parrots" fundamentally doesn't understand what neural networks do. The power does not come from sampling from a distributions over words but from the multi-dimensional representation. And it is that that enables LLMs to be more than just mechanisms that produce copies of material previously seen in training.
+
+---
+
+[SpacetimeDB - 멀티플레이어 게임앱을 구축하기 위한 DB  GeekNews](https://news.hada.io/topic?id=20267)
+
+- [GitHub - clockworklabsSpacetimeDB Multiplayer at the speed of light](https://github.com/ClockworkLabs/SpacetimeDB)
+- [Docs  SpacetimeDB](https://spacetimedb.com/docs)
+
+```
+    Client Application                          SpacetimeDB
+┌───────────────────────┐                ┌───────────────────────┐
+│                       │                │                       │
+│  ┌─────────────────┐  │    SQL Query   │  ┌─────────────────┐  │
+│  │ Subscribed Data │<─────────────────────│    Database     │  │
+│  └─────────────────┘  │                │  └─────────────────┘  │
+│           │           │                │           ^           │
+│           │           │                │           │           │
+│           v           │                │           v           │
+│  +─────────────────┐  │ call_reducer() │  ┌─────────────────┐  │
+│  │   Client Code   │─────────────────────>│   Module Code   │  │
+│  └─────────────────┘  │                │  └─────────────────┘  │
+│                       │                │                       │
+└───────────────────────┘                └───────────────────────┘
+```
+
+c# 예시 코드는 아래처럼
+
+SpacetimeDB modules have two ways to interact with the outside world: tables and reducers.
+
+- **Tables** store data and optionally make it readable by clients.
+- **Reducers** are functions that modify data and can be invoked by clients over the network. They can read and write data in tables, and write to a private debug log.
+
+```cs
+static partial class Module
+{
+    [SpacetimeDB.Table(Name = "player")]
+    public partial struct Player
+    {
+        public int Id;
+        public string Name;
+    }
+
+    [SpacetimeDB.Reducer]
+    public static void AddPerson(ReducerContext ctx, int Id, string Name) {
+        ctx.Db.player.Insert(new Player { Id = Id, Name = Name });
+    }
+}
+```
+- 개인 의견을 적어보자. ORM 수준에서 멈췄어도 될만한데 일을 너무 많이 하려는 것 같다. 만약 내가 결정권자라면 안 쓸 것 같다.
+   - 데이터 마이그레이션 고려한 설계인지?? <- 이거 안되면 서비스 못한다.
+   - ORM 으로 object <-> sql query 변환 레이어를 감싸고 있지만, 이 레이어에서 모든 요구사항을 깔끔하게 담기 힘들었다. 일부는 raw query를 손으로 작성해야 하는데, Reducer 의 지금 형태가 지원을 해주는지? (ex : multitable join 쿼리)
+   - c# event 콜백 사용하는 건 좀 그렇다. 코드 참조 바로바로 확인하려면 개인적으로 메서드 직접 호출하는 방식을 선호함
+   - 캐시 레이어 지원이 가능한지?? 매번 데이터 변경할 때마다 sql query 통신을 대기해야 한다? -> 한국에서 mmo 서비스 못한다.
+   - DB 유지 보수를 위한 프로젝트 내 커뮤니케이션에서 코드 내 SQL 전수조사 했던 일이 잦았다. 코드 -> 쿼리 추출을 지원해줄 수 있는지?
+   - db 와 통신하는 스레드 통제하는 듯 한데 굳이 해야 하나. 
