--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1579,3 +1579,42 @@ static partial class Module
 
 - 마소 공식으로 지원하는 ORM 솔루션인 Entity Framework Core(EF Core) 쓸 것 같다.
 - ORM 수준에서 멈췄어도 될만한데 일을 너무 많이 하려는 것 같다. 만약 내가 결정권자라면 안 쓸 것 같다.
+
+---
+
+### Typescript 의 Intersection Types
+
+공용체를 표현하는 방식이면서 조금 다르게 사용할 수 있다.
+
+    Intersection types are closely related to union types, but they are used very differently. An intersection type combines multiple types into one. This allows you to add together existing types to get a single type that has all the features you need. For example, Person & Serializable & Loggable is a type which is all of Person and Serializable and Loggable. That means an object of this type will have all members of all three types.
+
+
+```ts
+interface ErrorHandling {
+  success: boolean;
+  error?: { message: string };
+}
+ 
+interface ArtworksData {
+  artworks: { title: string }[];
+}
+ 
+interface ArtistsData {
+  artists: { name: string }[];
+}
+ 
+// These interfaces are composed to have
+// consistent error handling, and their own data.
+ 
+type ArtworksResponse = ArtworksData & ErrorHandling;
+type ArtistsResponse = ArtistsData & ErrorHandling;
+ 
+const handleArtistsResponse = (response: ArtistsResponse) => {
+  if (response.error) {
+    console.error(response.error.message);
+    return;
+  }
+ 
+  console.log(response.artists);
+};
+```
