--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1618,3 +1618,26 @@ const handleArtistsResponse = (response: ArtistsResponse) => {
   console.log(response.artists);
 };
 ```
+
+---
+
+[내가 아는 최고의 개발자들이 공통적으로 가진 특성  GeekNews](https://news.hada.io/topic?id=20244)
+
+- 도구를 깊이 이해할 것
+
+    도구를 ‘사용’할 줄 아는 것과, 그것을 ‘이해’하는 것은 다른 수준임
+    도구를 잘 아는 사람은 설정 하나하나를 설명할 수 있음
+    잘 이해하려면 도구의:
+        역사 (왜 만들어졌는가)
+        현재 (누가 관리하는가)
+        한계 (언제 안 맞는가)
+        생태계 (주변 도구, 라이브러리 등)
+        를 모두 파악하고 있어야 함
+    Kafka 등을 주력으로 쓴다면, Reddit에서 본 수준 이상으로 알고 있어야 함
+
+- [The Best Programmers I Know  Matthias Endler](https://endler.dev/2025/best-programmers/)
+
+- its history: who created it? Why? To solve which problem?
+- its present: who maintains it? Where do they work? On what?
+- its limitations: when is the tool not a good fit? When does it break?
+- its ecosystem: what libraries exist? Who uses it? What plugins?
