--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1641,3 +1641,17 @@ const handleArtistsResponse = (response: ArtistsResponse) => {
 - its present: who maintains it? Where do they work? On what?
 - its limitations: when is the tool not a good fit? When does it break?
 - its ecosystem: what libraries exist? Who uses it? What plugins?
+
+---
+
+### 마비노기 모바일 거지런
+
+[어비스 거지런 공략 - 마비노기 모바일 마이너 갤러리](https://gall.dcinside.com/mgallery/board/view/?id=mabinogimobile&no=343534)
+
+- 마비노기 모바일 만렙 컨텐츠에 해당하는 '어비스' 던전에 관련된 공략글
+- '어비스'던전은 하루 입장 제한 횟수가 있는데, 던전을 클리어하지 않고 도중에 나오면 입장 횟수가 차감되는 것이 아니라 다시 회복시켜준다.
+- 이 시스템을 이용해서, 보스방 직전까지 갔다가 나오는 걸 반복하는 파밍 법, 시간을 엄청나게 갈아넣는 셈
+  - 특히 어비스 던전은 만렙 컨텐츠이니 만큼 초반 루팅 효율이 짭짤하다고 소문이 나버리니... 많은 사람들이 거지런을 시도한다.
+
+- 여기서 서버 측 이슈가 발생함. 유저들이 거지런을 하도 해대니 채널 인스턴스가 자꾸 만들어진다.
+- 안그래도 몬스터가 많아서 나름 묵직한 녀석인데, 입장 제한 없이 자꾸 만들어버리니... 서버 cpu 가 90% 까지 스파이크 치고 경고 알림이 왔다.
