--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1655,3 +1655,30 @@ const handleArtistsResponse = (response: ArtistsResponse) => {
 
 - 여기서 서버 측 이슈가 발생함. 유저들이 거지런을 하도 해대니 채널 인스턴스가 자꾸 만들어진다.
 - 안그래도 몬스터가 많아서 나름 묵직한 녀석인데, 입장 제한 없이 자꾸 만들어버리니... 서버 cpu 가 90% 까지 스파이크 치고 경고 알림이 왔다.
+
+## 25.04.15
+
+### BulkHead
+
+[Bulkhead · App-vNextPolly Wiki](https://github.com/App-vNext/Polly/wiki/Bulkhead)
+
+- To limit the resources consumable by the governed actions, such that a fault 'storm' cannot cause a cascading failure also bringing down other operations.
+
+- 예상 이상의 리소스 소모가 발생한 경우, 이로 인한 파장이 커져서 연쇄적인 문제를 발생시키지 않기 위해 차단하는 것
+
+    When a process begins to fault, it can build up a large number of requests, all potentially failing slowly in parallel. If unconstrained, these can chew up ever greater resource (CPU/threads/memory etc) in the host, degrading capability or eventually causing outright failure.
+
+    In a variant, a faulted downstream system can lead to a 'backing up' of large numbers of requests in its consumers. If ungoverned, these 'backed-up' calls can in turn consume all resources in the consumer, leading to a cascading upstream failure.
+
+    A bulkhead is a wall within a ship which separates one compartment from another, such that damage to one compartment does not cause the whole ship to sink.
+
+**Gemini 설명**
+
+- **벌크헤드(Bulkhead)**는 선박이나 항공기의 동체, 또는 건축물에서 구획을 나누는 칸막이 벽을 의미합니다. 이 칸막이 벽은 단순히 공간을 나누는 역할뿐만 아니라, 중요한 구조적 기능과 안전 기능을 수행합니다.
+
+주요 기능:
+
+- 구획 분리: 내부 공간을 여러 개의 독립된 구획으로 나눕니다.
+- 구조적 강성 강화: 선체나 동체의 강성을 높여 외부 압력이나 충격에 대한 저항력을 강화합니다.
+- 침수 또는 화재 확산 방지: 한 구획에 침수나 화재가 발생했을 때, 벌크헤드가 이를 다른 구획으로 확산되는 것을 막아 전체적인 손실을 줄이고 생존성을 높입니다. (특히 선박에서 중요합니다.)
+- 소음 및 진동 감소: 일부 벌크헤드는 방음 및 방진 기능을 수행하여 쾌적한 환경을 조성하는 데 기여합니다.
