--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1656,6 +1656,53 @@ const handleArtistsResponse = (response: ArtistsResponse) => {
 - 여기서 서버 측 이슈가 발생함. 유저들이 거지런을 하도 해대니 채널 인스턴스가 자꾸 만들어진다.
 - 안그래도 몬스터가 많아서 나름 묵직한 녀석인데, 입장 제한 없이 자꾸 만들어버리니... 서버 cpu 가 90% 까지 스파이크 치고 경고 알림이 왔다.
 
+---
+
+- **4월 16일 관련 공지**
+
+[어비스 던전 보상 획득 구조와 플레이 방식 관련 안내 - 마비노기 모바일](https://mabinogimobile.nexon.com/News/Notice/2822014)
+
+    어비스 던전에서는 클리어 보상과 별도로,
+
+    각 던전 몬스터를 처치했을 때 보상을 획득할 수 있는 기회가 설정되어 있습니다.
+     
+
+    이 기회는 한도가 정해져 있어서 한도까지 다 사용하면 더 이상 보상 획득 기회가 주어지지 않습니다.
+    그리고 어비스 던전을 클리어 하면 이 기회는 남은 기회에 일정량을 더해서
+
+    다음 플레이에 적용되도록 되어 있습니다.
+    이것은 던전 지역이나 난이도와 관계없이 3번만 적용됩니다.
+
+     
+
+    보상을 획득할 수 있는 기회는 클리어 할 때 최대치로 리셋되는 방식이 아니라
+    기회를 다 사용하지 않아도 사라지지 않고 남아서 더해지도록 되어있으며
+
+    남은 기회의 수가 많을 수록 그 기회가 등장할 확률이 높아지도록 되어 있습니다. 
+
+     
+
+    그렇기 때문에 기회가 고갈될 때까지 클리어를 미루고 반복해서 플레이 하는 것은
+
+    정상적으로 클리어 하는 모험가님과 평균적인 획득 보상의 수준은 별다른 차이가 없으며
+
+    들이는 시간과 노력에 대비해 좋은 결과를 주지 않는다는 점을 말씀드립니다. 
+
+     
+
+    한편, 파티를 이뤄 플레이하다 던전을 이탈하는 것은
+
+    던전을 끝까지 진행하려는 다른 모험가님들에게 불편을 초래할 수 있으므로
+
+    모쪼록 삼가해주시기를 간곡히 부탁드립니다.
+
+이미 개발진에서는 예상한 일이고, 드롭테이블에서 보상 획득 기회는 한정되어 있다.
+
+- [마비m 결국 거지런은 민폐는 민폐대로 끼치고 해골물만 마신거야](https://bbs.ruliweb.com/community/board/300143/read/70300950)
+- [마비m 이걸로 거지런 민폐는 싹다 죽겠네](https://bbs.ruliweb.com/community/board/300143/read/70300969)
+- 거지런 돌린다고 보스방 직전에서 파티 탈퇴하고 나가서 민페 끼치던 사람들...!! 민폐는 민폐대로 끼치고 해골물만 마신 것임...
+
+
 ## 25.04.15
 
 ### BulkHead
