--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1729,3 +1729,42 @@ const handleArtistsResponse = (response: ArtistsResponse) => {
 - 구조적 강성 강화: 선체나 동체의 강성을 높여 외부 압력이나 충격에 대한 저항력을 강화합니다.
 - 침수 또는 화재 확산 방지: 한 구획에 침수나 화재가 발생했을 때, 벌크헤드가 이를 다른 구획으로 확산되는 것을 막아 전체적인 손실을 줄이고 생존성을 높입니다. (특히 선박에서 중요합니다.)
 - 소음 및 진동 감소: 일부 벌크헤드는 방음 및 방진 기능을 수행하여 쾌적한 환경을 조성하는 데 기여합니다.
+
+## 25.04.17
+
+[실시간 메시징 시스템 개발기 - “성능 개선 레슨런“ - tech.kakao.com](https://tech.kakao.com/posts/680)
+
+---
+
+- io_uring
+- [io_uring - Wikipedia](https://en.wikipedia.org/wiki/Io_uring)
+
+---
+
+- tcp nagle
+- [Nagle's algorithm - Wikipedia](https://en.wikipedia.org/wiki/Nagle%27s_algorithm)
+
+> It was published in 1984 as a Request for Comments (RFC) with title Congestion Control in IP/TCP Internetworks in RFC 896
+
+- 'small-packet problem' 을 막기 위함
+  - 작은 패킷 문제가 뭐냐면, tcp 패킷의 헤더 사이즈가 40 바이트인데 바디 사이즈가 1~2 바이트인 패킷을 계속 보낸다고 생각해보기. 이런 낭비가 또 없음.
+
+네이글 알고리즘의 작동 방식:
+
+1. 송신자는 데이터를 TCP 소켓에 씁니다.
+2. 만약 다음 조건 중 하나라도 참이라면, 데이터를 즉시 전송합니다.
+  2-1. 아직 전송되지 않은 데이터가 없고, 수신 윈도우 크기가 최대 세그먼트 크기(MSS, Maximum Segment Size)보다 크거나 전송할 데이터의 크기가 MSS보다 큰 경우.
+  2-2. 이전에 보낸 모든 작은 패킷에 대한 ACK를 받은 경우.
+3. 그렇지 않다면 (이전에 보낸 작은 패킷에 대한 ACK를 받지 못했고, 보낼 데이터가 MSS보다 작다면), 데이터를 버퍼에 보관하고 ACK를 기다립니다. ACK를 받으면 버퍼에 있는 모든 데이터를 하나의 패킷으로 묶어서 전송합니다.
+
+- 만능은 아니라서 HTTP 등 환경에 따라 효율성 차이가 난다고 함
+  - [TCP_CORK More than you ever wanted to know](https://baus.net/on-tcp_cork/)
+
+---
+
+- TCP_CORK
+- [What is TCP_CORK](https://catonmat.net/tcp-cork)
+- cork 가 뭐냐면 코르크 마개임
+- linux 전용, 커널에 데이터를 모아두었다가 한번에 큰 패킷을 만들어 보내는 것
+- nagle 은 커널(운영체제 레이어) 단에서 자동 관리되는 반면에, cork 는 애플리케이션 명시제어가 가능한 점이 차이임.
+
