--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1734,10 +1734,21 @@ const handleArtistsResponse = (response: ArtistsResponse) => {
 
 [실시간 메시징 시스템 개발기 - “성능 개선 레슨런“ - tech.kakao.com](https://tech.kakao.com/posts/680)
 
+여기서 소개된 대안 중 io_uring / tcp nagle / tcp cork 정리해봄
+
 ---
 
 - io_uring
 - [io_uring - Wikipedia](https://en.wikipedia.org/wiki/Io_uring)
+- [Linux Kernel Getting io_uring To Deliver Fast & Efficient IO - Phoronix](https://www.phoronix.com/news/Linux-io_uring-Fast-Efficient)
+
+> The purpose of io_uring is to deliver faster and more efficient I/O operations on Linux and should be coming with the next kernel cycle.
+
+linux 시스템의 비동기 IO (리눅스 커널의 시스템 콜)
+
+- aio 기능을 개선했다고 함
+- circular buffer(원형 큐 / 환형 큐) 두 개를 준비. 하나는 submission queue / completion queue, 이 둘을 커널과 애플리케이션이 공유하는 형태
+- 공유 버퍼를 사용해서 시스템 콜을 불필요하게 호출하는 일을 줄였다고 함.
 
 ---
 
@@ -1768,3 +1779,15 @@ const handleArtistsResponse = (response: ArtistsResponse) => {
 - linux 전용, 커널에 데이터를 모아두었다가 한번에 큰 패킷을 만들어 보내는 것
 - nagle 은 커널(운영체제 레이어) 단에서 자동 관리되는 반면에, cork 는 애플리케이션 명시제어가 가능한 점이 차이임.
 
+## 25.04.18
+
+[(691) The fastest way to add new files in Visual Studio - YouTube](https://www.youtube.com/watch?v=vrtquQcKx1c&t=105s)
+
+- Visual Studio 2022 에서 단축키 'Ctrl + Shift + A'  로 'Add New Item' 명령창을 띄울 수 있다. 여기서 굉장히 스마트한 기능을 제공.
+
+![image_2025-04-18-11-47-22](img/image_2025-04-18-11-47-22.png)
+
+- ClassLibrary/ `Test.html, Test.html.css` 
+  - 여러 파일을 한번의 생성 가능
+- ClassLibrary/ `Folder / Foo.cs`
+  - 디렉토리와 파일을 동시에 생성 가능
