--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1800,3 +1800,36 @@ linux 시스템의 비동기 IO (리눅스 커널의 시스템 콜)
   - 여러 파일을 한번의 생성 가능
 - ClassLibrary/ `Folder / Foo.cs`
   - 디렉토리와 파일을 동시에 생성 가능
+
+## 25.04.21
+
+[Cursor에 €400를 날려본 경험에서 얻은 교훈  GeekNews](https://news.hada.io/topic?id=20358)
+
+- Cursor는 빠르게 마이크로 SaaS를 만들 수 있을 만큼 생산성이 뛰어난 개발 도구여서 무조건 써야함
+- 그러나 AI가 생성한 코드는 일관성이 부족하고, 보안 취약점이 생길 수 있음
+
+
+1. 무료 또는 Premium 모델은 사용 비추천
+
+    Cursor와 함께 코딩하는 것은 마치 주니어 개발자와 함께 코딩하는 것과 같음
+        결과물은 "어떻게든 작동은 하지만 아무도 손대고 싶지 않은 스파게티 코드"가 되며, 모든 것을 리팩토링해야함
+    예외: 이미지 입력이 필요한 경우에는 gpt-4o 사용 가능 (예: 디자인 기반 구현)
+
+6. 기본 지시문(Default Instructions) 적극 활용
+
+    Cursor 설정의 Rules for AI 및 Project rules에 자주 사용하는 라이브러리를 명시할 것
+    예: HeroIcons를 사용하기로 했다면 이를 기본 지시문에 추가해야 일관된 결과 유지 가능
+    그렇지 않으면 lucide-icon, HeroIcons, 또는 무작위 SVG 아이콘이 혼합되어 생성될 수 있음
+
+7. 기존 파일을 참조로 제공하여 일관성 확보
+
+    예를 들어 하나의 API endpoint가 이미 있다면, 새 endpoint 요청 시 기존 파일을 함께 제공
+    예시 문장: "projects/routes와 유사한 방식으로 리소스를 위한 CRUD API endpoint 생성"
+    이렇게 하면 코드 스타일과 구현 방식의 일관성 유지에 매우 효과적
+
+8. 꼭 PR 리뷰를 직접 수행할 것
+
+    Cursor는 때때로 중요한 코드를 제거하거나 보안 취약점을 도입하기도 함
+    특히 사용자 데이터를 저장하는 복잡한 프로젝트에는 주의 필요
+    자신이 코드를 완전히 이해하지 못하는 상황에서는 Cursor 사용을 자제해야 함
+
